[gd_scene load_steps=13 format=3 uid="uid://di7kuj8ok6oyi"]

[ext_resource type="PackedScene" uid="uid://kkt6g2ery6vj" path="res://Scenes/Units/unit_base.tscn" id="1_eb3im"]
[ext_resource type="Script" path="res://Code/Scripts/Units/unit_flying_bomber.gd" id="2_uemwd"]
[ext_resource type="Shader" path="res://Code/Shaders/unit_sprite.gdshader" id="3_7w2fu"]
[ext_resource type="PackedScene" uid="uid://bhp551sabqfag" path="res://Scenes/Units/Modules/team_sprite.tscn" id="4_rnocc"]
[ext_resource type="Texture2D" uid="uid://b33bj8e2vxw7s" path="res://Assets/mob/crow_green.png" id="4_v085u"]
[ext_resource type="PackedScene" uid="uid://byrhn5prsqo6c" path="res://Scenes/Units/TeamAssets/Green/GreenCrowSprite.tscn" id="5_evmmp"]
[ext_resource type="PackedScene" uid="uid://civ0qmljlf0kk" path="res://Scenes/Important/googley_eyes_pair.tscn" id="6_2g7rt"]
[ext_resource type="Texture2D" uid="uid://1yaupgrvy6mm" path="res://Assets/Images/shadow.png" id="7_c0wfd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hncq6"]
render_priority = -1
blend_mode = 3
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("7_c0wfd")
texture_filter = 0
texture_repeat = false

[sub_resource type="PlaneMesh" id="PlaneMesh_0vjf4"]
material = SubResource("StandardMaterial3D_hncq6")
size = Vector2(3, 1.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pe6vn"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_7w2fu")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/roughness = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/texture_albedo = ExtResource("4_v085u")

[sub_resource type="QuadMesh" id="QuadMesh_hny8j"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_pe6vn")
size = Vector2(4.69, 1.82)

[node name="UnitFlyingBomber" instance=ExtResource("1_eb3im")]
script = ExtResource("2_uemwd")
flapHeightMin = null
flapHeightMax = null
flapMagnitudeMin = null
flapMagnitudeMax = null
moveSpeedMin = null
moveSpeedMax = null
patrolRange = null
unit_name = "Flying Bomber"
unit_move_type = 1
facing = null
top_speed = null
move_accel = null
gravity = null
turning_time = null
max_health = null
knockback_immunity = null
attack_range = null
damage = null
reach_caster_damage = null
knockback = null

[node name="Shadow" parent="LaneOffset" index="0"]
mesh = SubResource("PlaneMesh_0vjf4")

[node name="BodyTransform" type="Node3D" parent="LaneOffset/FacingRotation/Sprites" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.120237, 0.209154, 0)

[node name="TeamSprite" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="0" instance=ExtResource("4_rnocc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19801, -0.199326, 0)
asset_var_name = "crow_sprite"

[node name="GreenCrowSprite" type="MeshInstance3D" parent="LaneOffset/FacingRotation/Sprites/BodyTransform/TeamSprite" index="0" instance=ExtResource("5_evmmp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.22343, 0.905456, 0)
mesh = SubResource("QuadMesh_hny8j")

[node name="GoogleyEyesPair" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="1" instance=ExtResource("6_2g7rt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32291, 0.673568, 0)
dampening = 0.9

[node name="TargetingTimer" type="Timer" parent="." index="1"]
unique_name_in_owner = true
wait_time = 0.25

[node name="UnitTargeting" parent="." index="2"]
max_vertical_range = 1000.0
splash_radius = 5.0
max_targets = 10
targeting_mask = 253
